--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "file-saver": "^1.3.3",
     "interweave": "^8.0.2",
     "moment": "^2.20.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.2.0",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
+    "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
