--- a/package.json
+++ b/package.json
@@ -3,29 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "file-saver": "^1.3.3",
-    "interweave": "^8.0.2",
-    "lodash": "^4.17.5",
-    "moment": "^2.20.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-collapse": "^4.0.3",
-    "react-dom": "^16.2.0",
-    "react-motion": "^0.5.2",
-    "react-redux": "^5.0.6",
-    "react-responsive": "^4.0.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
-    "redux": "^3.7.2",
+    "file-saver": "^2.0.2",
+    "interweave": "^12.5.0",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
+    "react": "^16.13.1",
+    "react-collapse": "^5.0.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-responsive": "^8.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.77.2",
-    "showdown": "^1.8.6"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^1.1.0",
+    "showdown": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
